fix: appeal container spacing

--- a/styles/Appeal.module.scss
+++ b/styles/Appeal.module.scss
@@ -3,12 +3,7 @@
 
 .appeal {
   @include flex-centered-content;
-  margin: $spacing-sm 0;
   color: $gray;
-
-  @include desktop {
-    margin: $spacing-md 0;
-  }
 
   :global {
     .appeal--content-container {
